eksworkshop/kube-ops-view/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: kube-ops-view
  name: kube-ops-view
spec:
  selector:
    application: kube-ops-view
  type: LoadBalancer
  ports:
  - port: 808
    protocol: TCP
    targetPort: 8080
