eksworkshop/kube-ops-view/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ops-view
spec:
  rules:
  - host: "kube-ops-view.example.org"
    http:
      paths:
      - path: /      
        pathType: Prefix  
        backend:
          service:
            name: kube-ops-view
            port: 
              number: 80
